PROJECT(ossimPlanetQt)
MESSAGE("**********************Setting up ossimPlanetQt********************")
INCLUDE(OssimVersion)
INCLUDE(OssimUtilities)
INCLUDE(OssimCommonVariables)
INCLUDE(OssimQt5Macros)
IF(NOT APPLE)
  cmake_minimum_required(VERSION 2.6)
ELSE(NOT APPLE)
  cmake_minimum_required(VERSION 2.8)
ENDIF(NOT APPLE)

# Find the QtWidgets library
find_package(Qt5Widgets)

# Find the QtWidgets library
find_package(Qt5Core)

# Find the QtOpenGL library
find_package(Qt5OpenGL)

find_package(OpenThreads)
find_package(ossim)
find_package(ossimPlanet)
find_package(OssimWMS)
find_package(OpenGL)
find_package(OSG)
find_package(GPSTK)
SET(QT_USE_QTOPENGL ON)

# Find includes in corresponding build directories
set(CMAKE_INCLUDE_CURRENT_DIR ON)
#set(CMAKE_AUTOMOC ON)

add_definitions(${Qt5Core_DEFINITIONS})
add_definitions(${Qt5Widgets_DEFINITIONS})
add_definitions(${Qt5OpenGL_DEFINITIONS})

INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${OSSIM_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${QT_INCLUDES})
INCLUDE_DIRECTORIES(${OPENTHREADS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TIFF_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSSIMWMS_INCLUDE_DIR})

# To pick up uic generated headers.
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

include_directories(${Qt5Core_INCLUDES})
include_directories(${Qt5Widgets_INCLUDES})
include_directories(${Qt5OpenGL_INCLUDES})

IF(GPSTK_FOUND AND OSSIMPLANET_ENABLE_EPHEMERIS)
   MESSAGE(STATUS "GPSTK_LIBRARY               = ${GPSTK_LIBRARY}")
   MESSAGE(STATUS "GPSTK_INCLUDE_DIR           = ${GPSTK_INCLUDE_DIR}")
   ADD_DEFINITIONS("-DOSSIMPLANET_ENABLE_EPHEMERIS")
   INCLUDE_DIRECTORIES(${GPSTK_INCLUDE_DIR})
ELSE()
   SET(GPSTK_LIBRARY "")
ENDIF()

IF(NOT OSSIMPREDATOR_LIBRARY)
  set(OSSIMPREDATOR_LIBRARY "")
ENDIF()


############################################## BUILD THE LIBRARY ############################################
SET(LIB_NAME ossimPlanetQt)
FILE(GLOB OSSIMPLANETQT_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/include/ossimPlanetQt/ossimPlanet*.h")
FILE(GLOB OSSIMPLANETQT_SRCS "${CMAKE_CURRENT_SOURCE_DIR}/src/gui/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/src/core/*.cpp" )
FILE(GLOB OSSIMPLANETQT_UIS  "${CMAKE_CURRENT_SOURCE_DIR}/src/gui/ui/*.ui")

INCLUDE_DIRECTORIES(${OSSIMPLANET_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OSG_INCLUDE_DIR})

LIST(APPEND ADDITIONAL_LIBRARIES ${OSSIMPLANET_LIBRARY})
LIST(APPEND ADDITIONAL_LIBRARIES ${QT_QTOPENGL_LIBRARY})

ADD_DEFINITIONS(-DOSSIM_PLANET_ENABLED)

message("Qt5Core_LIBRARIES: ${Qt5Core_LIBRARIES}")
message("Qt5Widgets_LIBRARIES: ${Qt5Widgets_LIBRARIES}")
message("Qt5OpenGL_LIBRARIES: ${Qt5OpenGL_LIBRARIES}")

QT5_WRAP_CPP(OSSIMPLANETQT_MOC_SRCS ${OSSIMPLANETQT_INCLUDES} )

MESSAGE("UI_DESTINATION_DIR ${${PROJECT_NAME}_SOURCE_DIR}/include/ossimPlanetQt")
SET(UI_DESTINATION_DIR ${${PROJECT_NAME}_SOURCE_DIR}/include/ossimPlanetQt)

qt5_wrap_ui( OSSIMPLANETQT_UI_HEADERS ${OSSIMPLANETQT_UIS} )

message("UI_HEADERS: ${OSSIMPLANETQT_UI_HEADERS}")
# source_group("Generated UI Headers" FILES ${UI_HEADERS})


SET(UI_DESTINATION_DIR ${${PROJECT_NAME}_SOURCE_DIR}/include/ossimPlanetQt)

SET(INCLUDE_DIR "include/ossimPlanetQt")
SET(INSTALL_INCLUDE_DIR "include/ossimPlanetQt")

OSSIM_LINK_LIBRARY(${LIB_NAME} COMPONENT_NAME ossim TYPE "${OSSIM_USER_DEFINED_DYNAMIC_OR_STATIC}" HEADERS ${OSSIMPLANETQT_INCLUDES} ${OSSIMPLANETQT_UI_HEADERS}  SOURCE_FILES ${OSSIMPLANETQT_SRCS}  ${OSSIMPLANETQT_MOC_SRCS}
                   LIBRARIES ${OSSIM_LIBRARY} ${OSGVIEWER_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY}  ${OSGTEXT_LIBRARY} ${OSGUTIL_LIBRARY}  ${OSG_LIBRARY} ${OPENTHREADS_LIBRARY} ${JPEG_LIBRARY} ${OSSIMWMS_LIBRARY} ${GPSTK_LIBRARY} ${OSSIMPREDATOR_LIBRARY} ${ZLIB_LIBRARY} ${Qt5Core_LIBRARIES} ${Qt5Widgets_LIBRARIES} ${Qt5OpenGL_LIBRARIES} ${OSSIMPLANET_LIBRARY} ${ADDITIONAL_LIBRARIES}
                   INSTALL_LIB VERSION_SYMLINKS ADDITIONAL_COMPILE_FLAGS "-DOSSIMPLANETQT_LIBRARY")

############################################# BUILD THE APPLICATIONS #################################################

REMOVE_DEFINITIONS(-DOSSIMPLANETQT_LIBRARY)
QT5_ADD_RESOURCES(OSSIMPLANETQT_RC "${PROJECT_SOURCE_DIR}/apps/ossimPlanetQt.qrc")

set(TARGET_COMMON_LIBRARIES ossimPlanetQt)
FILE(GLOB SOURCE_FILES "${PROJECT_SOURCE_DIR}/apps/ossimplanet/main.cpp")
SET(OSSIM_BUILD_APPLICATION_BUNDLES ON)
OSSIM_SETUP_APPLICATION(ossimplanetGui REQUIRE_WINMAIN_FLAG INSTALL COMPONENT_NAME ossim SOURCE_FILES ${SOURCE_FILES} ${OSSIMPLANETQT_RC})
SET_TARGET_PROPERTIES(ossimplanetGui PROPERTIES RUNTIME_OUTPUT_NAME ossimplanet)


########################### SETUP UNINSTALL ############################
OSSIM_ADD_COMMON_MAKE_UNINSTALL()
